Inventory & Sales reports stabilized (CSV UTF-8, product performance, stock partner)

--- a/templates/inventory/inventory_overview.html
+++ b/templates/inventory/inventory_overview.html
@@ -83,6 +83,7 @@
         <th>Name(EN)</th>
         <th>Name(KO)</th>
         <th>Qty</th>
+        <th>Partner</th>
         <th>Ref</th>
         <th>Memo</th>
       </tr>
@@ -96,6 +97,7 @@
         <td>{{ m.product.name_en }}</td>
         <td>{{ m.product.name_ko }}</td>
         <td>{{ m.qty_units }}</td>
+        <td>{{ m.partner_display }}</td>
         <td>{{ m.ref_table }} #{{ m.ref_id }}</td>
         <td>{{ m.memo }}</td>
       </tr>
